Fix SBR reads when reading rows created via UPSERT
The Spark BulkReader is returning with no rows when the SSTable has been created with an
UPSERT command (i.e. used UPDATE to create the row). The issue only manifests itself
when the query has a column projection as illustrated below.

```
final Dataset<Row> df = spark.read().format("org.apache.cassandra.spark.sparksql.LocalDataSource")
                             .option("version", "FOURZERO")
                             .option("keyspace", "foo")
                             .option("createStmt", "CREATE TABLE foo (k int, c int, v int, s list<frozen<tuple<bigint, timestamp>>>, PRIMARY KEY (k, c))")
                             .option("dirs", "/path/to/dir")
                             .load();

List<Row> listNoColumnProjection = df.collectAsList();
List<Row> listWithColumnProjection = df.select("k", "c").collectAsList();
```

In the example above, `listNoColumnProjection.size() != listWithColumnProjection.size()`.
In fact, `listWithColumnProjection` comes back with zero rows.

The root cause of the issue is the way we build the `ColumnFilter`. Currently, the
`ColumnFilter` is using the `selectionBuilder()` API. However, the `selectionBuilder`
does not include table metadata, which causes issues during read of SSTables that were
created via `UPDATE`.

This commit uses the `ColumnFilter.allRegularColumnsBuilder` API.
By using the `ColumnFilter.allRegularColumnsBuilder(TableMetadata)`
API, we are effectively fetching all regular columns and querying the columns that are
required in the query.

This commit also adds new tests to the `EndToEndTests` class. The new tests insert
new rows to the test tables using `UPDATE` commands as opposed to `INSERT`. Additionally,
the test framework now support inserting via `UPDATE`.